m2k_app1/myproject/deploy/yamls-parameterized/kustomize/base/legacy-java-application-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: legacy-java-application
    name: legacy-java-application
spec:
    replicas: 2
    selector:
        matchLabels:
            move2kube.konveyor.io/service: legacy-java-application
    strategy: {}
    template:
        metadata:
            creationTimestamp: null
            labels:
                move2kube.konveyor.io/service: legacy-java-application
            name: legacy-java-application
        spec:
            containers:
                - image: index.docker.io/joseporres/legacy-java-application:latest
                  imagePullPolicy: Always
                  name: legacy-java-application
                  ports:
                    - containerPort: 8080
                  resources: {}
            restartPolicy: Always
            securityContext: {}
status: {}

...
