m2k_app1/myproject/deploy/yamls-parameterized/kustomize/base/legacy-java-application-service.yaml

---
apiVersion: v1
kind: Service
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: legacy-java-application
    name: legacy-java-application
spec:
    ports:
        - name: port-8080
          port: 8080
          targetPort: 8080
    selector:
        move2kube.konveyor.io/service: legacy-java-application
    type: ClusterIP
status:
    loadBalancer: {}

...
