m2k_app1/myproject/deploy/yamls-parameterized/kustomize/base/myproject-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: myproject
    name: myproject
spec:
    rules:
        - host: localhost
          http:
            paths:
                - backend:
                    service:
                        name: legacy-java-application
                        port:
                            name: port-8080
                  path: /legacy-java-application
                  pathType: Prefix
status:
    loadBalancer: {}

...
